# tmp-hons

./: .gitignore  .gitmodules  CMakeLists.txt  flake.nix  pddl.nix  problem.pddl  profile.py  research_proposal.md
docs/: json-schema.md
problems/blocksworld/: dead_simple.pddl  domain.pddl  gen_blockworld.py  parallel.pddl  random.pddl  simple.pddl  sussman.pddl
problems/multi_blocksworld/: domain.pddl  parallel.pddl  random.pddl
report/: ir.md
scripts/: gen_blockworld.py  parse.py  plan.sh  profile.py  validate.py
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  graph.cpp  graph.h  logic.h  main.cpp  strips.cpp  strips.h  transition.cpp  transition.h
tmp/: domain.pddl  idtmp_blocksworld.py  run_all_modes.py
translation/: parse.py  translate.py  util.py  validate.py
